--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=bollywood
 server.port=8081
+
+spring.security.user.name=niteen
+spring.security.user.password=niteen
